10106
In earlier versions:

{noformat}
(export V=v2.11.0-M4 && scalac-hash $V sandbox/test.scala && scala-hash $V Test)
sandbox/test.scala:6: error: result type Casey of unapply defined in method unapply in object Casey does not conform to Option[_] or Boolean
    val Casey(x) = new Casey(1)
             ^
one error found
{noformat}
